--- a/_posts/2024-10-13-1.md
+++ b/_posts/2024-10-13-1.md
@@ -4,7 +4,7 @@ title: "[洛谷]题解：P10903 [蓝桥杯 2024 省 C] 商品库存管理"
 subtitle: ""
 date: 2024-10-13
 author: "TH911"
-header-img: ""
+header-img: "img/2024/10/006.jpeg"
 header-mask: 0.4
 tags:
   - 题解
