--- a/_posts/2024-10-13-2.md
+++ b/_posts/2024-10-13-2.md
@@ -4,7 +4,7 @@ title: "留给cfy"
 subtitle: "自言自语罢了。"
 date: 2024-10-13
 author: "TH911"
-header-img: "img/007.jpg"
+header-img: "img/2024/10/007.jpg"
 header-mask: 0.4
 tags:
   - cfy
