--- a/_posts/2024-10-13-1.md
+++ b/_posts/2024-10-13-1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "[洛谷]题解：P10903 [蓝桥杯 2024 省 C] 商品库存管理"
+title: "题解：P10903 [蓝桥杯 2024 省 C] 商品库存管理"
 subtitle: ""
 date: 2024-10-13
 author: "TH911"
@@ -9,6 +9,8 @@ header-mask: 0.4
 tags:
   - 题解
   - 洛谷
+  - 前缀和
+  - 差分
 ---
 
 > 本文转载自我在[洛谷](https://www.luogu.com.cn)上[P10903](https://www.luogu.com.cn/problem/P10903)的[题解](https://www.luogu.com.cn/article/03espga3)。
