--- a/_posts/2024-10-02-1.md
+++ b/_posts/2024-10-02-1.md
@@ -4,10 +4,9 @@ title: "个人记录：洛谷P2357"
 subtitle: ""
 date: 2024-10-02
 author: "TH911"
-header-img: "img/bg/5.png"
+header-img: "img/bg/4.jpeg"
 header-mask: 0.4
 tags:
-
   - 个人记录
   - 洛谷
 ---
