--- a/_posts/2024-10-02-1.md
+++ b/_posts/2024-10-02-1.md
@@ -1,7 +1,7 @@
 ---
-layout: post
-title: "个人记录：洛谷P2357"
-subtitle: ""
+layout: keynote
+title: "洛谷P2357"
+subtitle: "个人记录"
 date: 2024-10-02
 author: "TH911"
 header-img: "img/bg/4.jpeg"
