--- a/_posts/2024-10-13-1.md
+++ b/_posts/2024-10-13-1.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: "题解：P10903 [蓝桥杯 2024 省 C] 商品库存管理"
-subtitle: ""
+title: "题解：[蓝桥杯 2024 省 C] 商品库存管理"
+subtitle: "洛谷P10903"
 date: 2024-10-13
 author: "TH911"
 header-img: "img/2024/10/006.jpeg"
