--- a/_posts/2024-10-17-1.md
+++ b/_posts/2024-10-17-1.md
@@ -13,6 +13,8 @@ tags:
   - 模拟
 ---
 
+> [洛谷同步链接](https://www.luogu.com.cn/article/vdsj7sd6)
+
 # 前置结论
 
 ### 结论
@@ -41,16 +43,16 @@ tags:
 > 前置知识：
 >
 > * 下取整函数单调不降，即对于 $x_1 < x_2$ 有 $\lfloor x_1\rfloor \le \lfloor x_2 \rfloor$；
-> * 整数可以自由移入移出下取整函数，即对于 $z \in \Z$，有 $\lfloor x \rfloor + z = \lfloor x + z \rfloor$。
+> * 整数可以自由移入移出下取整函数，即对于 $z \in \mathbb Z$，有 $\lfloor x \rfloor + z = \lfloor x + z \rfloor$。
 > * 注意：**负号**不能随便移入移出，$\lfloor -3.4 \rfloor \ne - \lfloor 3.4 \rfloor$。
-> * 关于这点很容易犯的一个错误就是对于 $z \in \Z$，有$\lfloor z - x \rfloor = z - \lfloor x \rfloor$，事实上这点根本不成立，举个反例：$\lfloor 1 - 0.3 \rfloor \ne 1 - \lfloor 0.3\rfloor$。
+> * 关于这点很容易犯的一个错误就是对于 $z \in \mathbb Z$，有$\lfloor z - x \rfloor = z - \lfloor x \rfloor$，事实上这点根本不成立，举个反例：$\lfloor 1 - 0.3 \rfloor \ne 1 - \lfloor 0.3\rfloor$。
 > * 刚刚这条错误就是很多伪证的错误原因所在，包括 **lyd 蓝书的证明也存在这个伪证**。
 >
 > 真正证明：
 >
-> 命题：对于 $x_1, x_2 \in \Z, x_1 \ge x_2, 0< p < 1$，有 $x_1 - \lfloor px_1 \rfloor \ge x_2 - \lfloor px_2 \rfloor$。
+> 命题：对于 $x_1, x_2 \in \mathbb Z, x_1 \ge x_2, 0< p < 1$，有 $x_1 - \lfloor px_1 \rfloor \ge x_2 - \lfloor px_2 \rfloor$。
 >
-> 证明：$x_1 \ge x_2 \land x_1, x_2 \in \Z$，因此 $x_1 - x_2 \in \N$。又因为 $0 <p < 1$，所以： 
+> 证明：$x_1 \ge x_2 \land x_1, x_2 \in \mathbb Z$，因此 $x_1 - x_2 \in \mathbb N$。又因为 $0 <p < 1$，所以： 
 > $$
 > \begin{aligned}
 > x_1 - x_2  &\ge p(x_1 - x_2)\\
@@ -60,7 +62,7 @@ tags:
 > x_1 - \lfloor px_1 \rfloor & \ge x_2 - \lfloor px_2 \rfloor
 > \end{aligned}
 > $$
->  
+> 
 >
 > 证明出了这一点的单调性之后，事实上我们就解决了 $q = 0$ 的单调性问题，接下来解决 $q \ge 0$ 的。 
 >
