--- a/_posts/2024-10-12-1.md
+++ b/_posts/2024-10-12-1.md
@@ -116,7 +116,7 @@ translate-pa.googleapis.com
 
 别的也有，比如 `mathjoy.eu.org`。
 
-注：想要测试能否成功可以参考https://translate.googleapis.com/translate_a/element.js的验证方法。
+注：想要测试能否成功可以参考<https://translate.googleapis.com/translate_a/element.js>的验证方法。
 
 但是，实测发现高版本Chrome会访问 `translate-pa.googleapis.com`（之前不会且暂未发现其镜像站），访问失败便不会全文翻译，所以这种方法如果不搭配Hosts文件，就会**失效**。
 
