--- a/_posts/2024-10-17-1.md
+++ b/_posts/2024-10-17-1.md
@@ -4,7 +4,7 @@ title: "题解：[NOIP2016 提高组] 蚯蚓"
 subtitle: "洛谷P2827"
 date: 2024-10-17
 author: "TH911"
-header-img: "img/bg/5.png"
+header-img: "img/2024/10/006.jpeg"
 header-mask: 0.4
 tags:
   - 题解
