--- a/_posts/2024-10-17-1.md
+++ b/_posts/2024-10-17-1.md
@@ -78,7 +78,7 @@ tags:
 >
 > 不知道你们有没有这个疑问，我补一下。<https://www.luogu.com.cn/discuss/551666>
 
-其中，$x -\lfloor px\rfloor,x-px$ 图像如此：
+其中，$\color{blue} x -\lfloor px\rfloor,\color{red} x-px$ 图像如此：
 
 ![desmos](https://cfyy.us.kg/img/2024/10/008.png)
 
