--- a/_posts/2024-10-17-1.md
+++ b/_posts/2024-10-17-1.md
@@ -14,6 +14,8 @@ tags:
 ---
 
 > [洛谷同步链接](https://www.luogu.com.cn/article/vdsj7sd6)
+>
+> [题目传送门](https://www.luogu.com.cn/problem/P2827)
 
 # 前置结论
 
