--- a/_posts/2024-10-18-1.md
+++ b/_posts/2024-10-18-1.md
@@ -49,6 +49,15 @@ tags:
 $0$ 表示并没有放置国王，$1$ 表示放置了国王。那么比如 $74=(01001010)_2$ 表示的便是这样的一行：
 
 ![](https://cfyy.us.kg/img/2024/10/011.png)
-$$
-\huge\boxed\boxed{♚}
-$$
+
+## 设计状态转移
+
+我们定义 $dp[i][j][k]$ 表示：
+
+* DP至第 $i$ 行；
+* 共放置了 $j$ 个国王（由于题目给出“放置 $K$ 个国王”）；
+* 第 $i-1$ 行状态为 $k$（因为国王**会影响到下一行的状态**）。
+
+一个很明显的结论是国王周围 $8$ 个格子内**不能**有其他国王（如图）。
+
+![国王放置情况](https://cfyy.us.kg/img/2024/10/012.png)
