--- a/_posts/2024-10-18-1.md
+++ b/_posts/2024-10-18-1.md
@@ -2,7 +2,7 @@
 layout: post
 title: "题解：[SCOI2005] 互不侵犯"
 subtitle: "洛谷P1896"
-date: 2024-10-17
+date: 2024-10-18
 author: "TH911"
 header-img: "img/2024/10/006.jpeg"
 header-mask: 0.4
@@ -61,3 +61,5 @@ $0$ 表示并没有放置国王，$1$ 表示放置了国王。那么比如 $74=(
 一个很明显的结论是国王周围 $8$ 个格子内**不能**有其他国王（如图）。
 
 ![国王放置情况](https://cfyy.us.kg/img/2024/10/012.png)
+
+$\color{blue}{蓝色}$ 为国王，
