--- a/_posts/2024-10-18-1.md
+++ b/_posts/2024-10-18-1.md
@@ -11,6 +11,7 @@ tags:
   - 洛谷
   - DP
   - 状压DP
+  - 提高+/省选−
 ---
 
 > [洛谷同步链接](https://www.luogu.com.cn/article/7if7f3dx)
@@ -38,7 +39,7 @@ tags:
 
 ### 状压DP
 
-在此基础上进行DP，状态的转移化为了整数，那么状态转移同样**得到了优化**。
+在此基础上进行DP，状态的转移化为了整数，那么状态转移同样**得到了优化**（位运算）。
 
 ## 设计状态压缩
 
@@ -62,4 +63,32 @@ $0$ 表示并没有放置国王，$1$ 表示放置了国王。那么比如 $74=(
 
 ![国王放置情况](https://cfyy.us.kg/img/2024/10/012.png)
 
-$\color{blue}{蓝色}$ 为国王，
+蓝色为国王，红色为不能走区域（橙色为红色重合部分），绿色为其他国王可以放置的位置。
+
+### 行内处理
+
+我们可以**先处理行内不可能存在的情况**：行内国王**相邻**。
+
+也就是说，状态 $S$ 内不能存在两个二进制位 $1$ 相邻。
+
+那么我们便可以这样判断（假设 $S=(110101)_2$）：
+
+1. `(S<<1)|S`
+
+   |  **`S`**   | **0** | **1** | **1** | **0** | **1** | **0** | **1** |
+   | :--------: | :---: | :---: | :---: | :---: | :---: | :---: | :---: |
+   | **`S<<1`** | **1** | **1** | **0** | **1** | **0** | **1** | **0** |
+
+   不难发现，如果此时有 $1$ 在同一列，那么 $S$ 便会有相邻的 $1$。
+
+2. `S|(S>>1)`
+
+   |  **`S`**   | **1** | **1** | **0** | **1** | **0** | **1** |
+   | :--------: | :---: | :---: | :---: | :---: | :---: | :---: |
+   | **`S>>1`** | **0** | **1** | **1** | **0** | **1** | **0** |
+
+   同理，如果有 $1$ 在同一列，那么 $S$ 便会有相邻的 $1$。
+
+所以，当一个状态 $S$ 满足 `(((S<<1)|S|(S>>1))&1)==0` 时，这一行才**可能**成立，其余情况**可以直接忽略**。
+
+### 行间处理
