--- a/_posts/2024-10-18-1.md
+++ b/_posts/2024-10-18-1.md
@@ -14,6 +14,16 @@ tags:
   - 提高+/省选−
 ---
 
+> <!DOCTYPE html>
+> <html>
+>     <head>
+>         <meta charset="utf-8">
+>     </head>
+>     <body>
+>         <script type="text/javascript">alert("这是一个警告框!");</script>
+>     </body>
+> </html>
+>
 > [洛谷同步链接](https://www.luogu.com.cn/article/7if7f3dx)
 >
 > [题目传送门](https://www.luogu.com.cn/problem/P1896)
@@ -90,5 +100,11 @@ $0$ 表示并没有放置国王，$1$ 表示放置了国王。那么比如 $74=(
    同理，如果有 $1$ 在同一列，那么 $S$ 便会有相邻的 $1$。
 
 所以，当一个状态 $S$ 满足 `(((S<<1)|S|(S>>1))&1)==0` 时，这一行才**可能**成立，其余情况**可以直接忽略**。
+
+***
+
+关于“为什么同时需要 `S<<1` 和 `S>>1`”？
+
+***
 
 ### 行间处理
