fix mathJax fix some wrong word

--- a/_posts/2024-10-18-1.md
+++ b/_posts/2024-10-18-1.md
@@ -57,7 +57,7 @@ $0$ 表示并没有放置国王，$1$ 表示放置了国王。那么比如 $74=(
 
 * DP至第 $i$ 行；
 * 共放置了 $j$ 个国王（由于题目给出“放置 $K$ 个国王”）；
-* 第 $i-1$ 行状态为 $k$（因为国王**会影响到下一行的状态**）。
+* 第 $i$ 行状态为 $k$（因为国王**会影响到下一行的状态**）。
 
 一个很明显的结论是国王周围 $8$ 个格子内**不能**有其他国王（如图）。
 
@@ -95,7 +95,7 @@ $0$ 表示并没有放置国王，$1$ 表示放置了国王。那么比如 $74=(
 
 不妨令第 $i$ 行状态为 $S1$，第 $i-1$ 行为 $S2$。
 
-同样的，由于我们进行了状态压缩，也就是当状态满足 `(S2<<1)&S1==0 && S2&S1==0&&(S2>>1)&S1==0` 时，第 $i$ 行才**有可能**为状态 $S1$。
+同样的，由于我们进行了状态压缩，也就是当状态满足 `((S2<<1)&S1)==0&&(S2&S1)==0&&((S2>>1)&S1)==0` 时，第 $i$ 行才**有可能**为状态 $S1$。
 
 对条件进行简写：`(((S2<<1)|S2|(S2>>1))&S1)==0`。
 
@@ -134,6 +134,10 @@ $$
    $ok,cnt$ 都需要开到 $2^{N+1}$。
 
    考虑到数据范围 $N\leq9$，并不会 $\text{MLE}$。
+
+3. **运算优先级**
+
+   参见[OI Wiki](https://oi-wiki.org/lang/op/#c-%E8%BF%90%E7%AE%97%E7%AC%A6%E4%BC%98%E5%85%88%E7%BA%A7%E6%80%BB%E8%A1%A8)，**可以发现 `&`、`^`、`|` 这三个位运算符的优先级低于 `==` 等关系运算符**。因此，建议对于位运算符，尽量都**加上括号保证运算顺序正确**。
 
 # AC代码
 
