--- a/_posts/2024-10-18-1.md
+++ b/_posts/2024-10-18-1.md
@@ -115,7 +115,7 @@ $$
 dp[0][0][0]=1
 $$
 
-很好理解，就是第 $0$ 行无法处理，只能放置 $0$ 个国王，第 $-1$ 行无法放置国王。
+很好理解，就是第 \(0\) 行无法处理，只能放置 $0$ 个国王，第 $-1$ 行无法放置国王。
 
 ~~但是，事实上多数情况都是为了运算方便而如此设计的。~~
 
