--- a/_posts/2024-10-20-1.md
+++ b/_posts/2024-10-20-1.md
@@ -1,15 +1,13 @@
 ---
 layout: post
-title: "关于MathJax"
-subtitle: "比较MathJax与KaTeX"
+title: "保留区"
+subtitle: "代替cfy"
 date: 2024-10-20
 author: "TH911"
-header-img: "img\2024\10\013.png"
+header-img: "img/2024/10/006.jpeg"
 header-mask: 0.4
 tags:
-  - MathJax
-  - KaTeX
-  - 前端
+  - cfy
 ---
 
 首先说一下使用感受吧：
