--- a/_posts/2024-10-20-1.md
+++ b/_posts/2024-10-20-1.md
@@ -1,13 +1,15 @@
 ---
 layout: post
-title: "保留区"
-subtitle: "代替cfy"
+title: "关于MathJax"
+subtitle: "比较MathJax与KaTeX"
 date: 2024-10-20
 author: "TH911"
 header-img: "img/2024/10/006.jpeg"
 header-mask: 0.4
 tags:
-  - cfy
+  - MathJax
+  - KaTeX
+  - 前端
 ---
 
 首先说一下使用感受吧：
@@ -18,3 +20,11 @@ tags:
 怎么说呢，单从配置难度来讲，$\KaTeX$ 完虐 MathJax。
 
 其次看看
+
+date: 
+author: "TH911"
+header-img: "img\2024\10\013.png"
+header-mask: 0.4
+tags:
+
+  - 
