--- a/_posts/2024-10-20-2.md
+++ b/_posts/2024-10-20-2.md
@@ -1,10 +1,10 @@
 ---
 layout: post
 title: "树上最近公共祖先（LCA）问题"
-subtitle: "例题：洛谷PP3379"
+subtitle: "例题：洛谷P3379"
 date: 2024-10-20
 author: "TH911"
-header-img: "img\2024\10\006.jpeg"
+header-img: "img/2024/10/006.jpeg"
 header-mask: 0.4
 tags:
   - LCA
