--- a/_posts/2024-10-20-1.md
+++ b/_posts/2024-10-20-1.md
@@ -15,16 +15,7 @@ tags:
 首先说一下使用感受吧：
 
 * **MathJax**：一堆奇奇怪怪的错误，渲染慢的同时一堆错。
-* **KaTeX**：渲染比较快，也比较轻量，但是仍然渲染会有问题。[比如这里](https://cfyy.us.kg/2024/10/13/1/#3%E5%89%8D%E7%BC%80%E5%92%8C%E5%B7%AE%E5%88%86%E4%BC%98%E5%8C%96)。
+* **$\KaTeX$**：渲染比较快，也比较轻量，但是仍然渲染会有问题。[比如这里](https://cfyy.us.kg/2024/10/13/1/#3%E5%89%8D%E7%BC%80%E5%92%8C%E5%B7%AE%E5%88%86%E4%BC%98%E5%8C%96)。
 
 怎么说呢，单从配置难度来讲，$\KaTeX$ 完虐 MathJax。
 
-其次看看
-
-date: 
-author: "TH911"
-header-img: "img\2024\10\013.png"
-header-mask: 0.4
-tags:
-
-  - 
