--- a/_posts/2024-10-20-1.md
+++ b/_posts/2024-10-20-1.md
@@ -4,7 +4,7 @@ title: "关于MathJax"
 subtitle: "比较MathJax与KaTeX"
 date: 2024-10-20
 author: "TH911"
-header-img: "img/2024/10/006.jpeg"
+header-img: "img/2024/10/013.png"
 header-mask: 0.4
 tags:
   - MathJax
