--- a/_posts/2024-10-20-3.md
+++ b/_posts/2024-10-20-3.md
@@ -22,7 +22,7 @@ tags:
 
 求**静态**区间最大（小）值，即一个区间不会修改。
 
-能够实现 $\mathcal O(n\log n)$ 预处理，**$O(1)$ 查询**。
+能够实现 $\mathcal O(n\log_2 n)$ 预处理，**$O(1)$ 查询**。
 
 # 实现
 
@@ -60,7 +60,7 @@ void st_pre(){
 
 其中，$lg[i]$ 表示 $\log_2i+1$。
 
-时间复杂度：$\mathcal O(n\log n)$。
+时间复杂度：$\mathcal O(n\log_2 n)$。
 
 ## 查询
 
