--- a/_posts/2024-10-20-2.md
+++ b/_posts/2024-10-20-2.md
@@ -25,9 +25,11 @@ tags:
 可以参考[**ST表**](https://cfyy.us.kg/2024/10/20/3/#%E5%80%8D%E5%A2%9E%E6%80%9D%E6%83%B3)。
 
 设 $\large f_{x,i}$ 表示 $x$ 的 $2^i$ 级祖先，用 $father_i$ 表示节点 $i$ 的父节点 ，则显然：
+
 $$
 \large f_{x,0}=father_x
 $$
+
 例如对于这棵树：
 
 ![](https://cfyy.us.kg/img/2024/10/014.png)
@@ -37,6 +39,7 @@ $$
 * 节点 $9$ 的 $2^1$ 级祖先 $\large f_{9,1}=father_6=2$。
 
 * 节点 $11$ 的 $2^2$ 级祖先：
+* 
   $$
   \begin{aligned}
   \large f_{11,2}&=\large 1\\
@@ -48,6 +51,7 @@ $$
 一个易于发现的事实是，**节点 $x$ 的 $2^i$ 级祖先是其 $2^{i-1}$ 级祖先的 $2^{i-1}$ 级祖先**。
 
 那么状态转移方程为：
+
 $$
 \Large f_{x,i}=f_{f_{x,i-1},i-1}
 $$
@@ -284,9 +288,13 @@ int lca(int u,int v){
 
 同时，**原本需要开至 $2n-1$ 大小的 $lg,st,rest$ 等数组可以只需要开 $n$ 个**。
 
-时间复杂度：$\mathcal O(1)$。
+**查询**时间复杂度：$\mathcal O(1)$。
 
 # Tarjan 离线算法（DFS+并查集）
+
+## 思想
+
+先一次性读入所有的询问（所有的 $u_i,v_i$），再进行运算后一次性输出。
 
 
 
