--- a/_posts/2024-10-20-3.md
+++ b/_posts/2024-10-20-3.md
@@ -12,21 +12,21 @@ tags:
   - 倍增算法
 ---
 
-# 定义
+## 定义
 
 > ST 表（Sparse Table，稀疏表）是用于解决 **可重复贡献问题** 的数据结构。——[OI Wiki](https://oi-wiki.org/ds/sparse-table/#%E5%AE%9A%E4%B9%89)
 
 ~~**可重复贡献问题**是什么我也不知道~~
 
-# 作用
+## 作用
 
 求**静态**区间最大（小）值，即一个区间不会修改。
 
 能够实现 $\mathcal O(n\log_2 n)$ 预处理，**$O(1)$ 查询**。
 
-# 实现
+## 实现
 
-## 倍增思想
+### 倍增思想
 
 设 $\large f_{x,i}$ 表示区间 $[x,x+2^i-1]$ 的**最大值**。（**最小值**同理，下文不再赘述）
 
@@ -40,7 +40,7 @@ $$
 $$
 其实和[**倍增LCA**](https://cfyy.us.kg/2024/10/20/2/#%E5%80%8D%E5%A2%9Elca)的转移方程很像~~虽然倍增算法基本都长这样~~，一同理解倍增可能会好一些。
 
-## 预处理
+### 预处理
 
 设数组 $f[x][i]$，定义同 $f_{x,i}$。
 
@@ -62,7 +62,7 @@ void st_pre(){
 
 时间复杂度：$\mathcal O(n\log_2 n)$。
 
-## 查询
+### 查询
 
 ST表可以实现 $\mathcal O(1)$ 查询，实现如下：
 
@@ -79,9 +79,9 @@ int s=log2(r-l+1);
 printf("%d\n",max(f[l][s],f[r-(1<<s)+1][s]));
 ```
 
-# 例题
+## 例题
 
-## 洛谷P3865
+### 洛谷P3865
 
 [【模板】ST 表 && RMQ 问题](https://www.luogu.com.cn/problem/P3865)
 
