--- a/_posts/2024-10-20-2.md
+++ b/_posts/2024-10-20-2.md
@@ -312,10 +312,7 @@ int lca(int u,int v){
 
 ### 倍增算法
 
-<details>
-<summary>**参考**代码</summary>
-
-```
+```cpp
 //#include<bits/stdc++.h>
 #include<algorithm>
 #include<iostream>
@@ -390,14 +387,10 @@ int main(){
 	return 0;
 }
 ```
-</details>
 
 ### 欧拉序+ST表
 
-<details>
-<summary>**参考**代码</summary>
-
-```
+```cpp
 //#include<bits/stdc++.h>
 #include<algorithm> 
 #include<iostream>
@@ -478,14 +471,10 @@ int main(){
 	return 0;
 }
 ```
-</details>
 
 ### DFS序+ST表
 
-<details>
-<summary>**参考**代码</summary>
-
-```
+```cpp
 //#include<bits/stdc++.h>
 #include<algorithm> 
 #include<iostream>
@@ -564,7 +553,6 @@ int main(){
 	return 0;
 }
 ```
-</details>
 
 ### Tarjan 离线算法（DFS+并查集）
 
