--- a/_posts/2024-10-20-2.md
+++ b/_posts/2024-10-20-2.md
@@ -98,7 +98,7 @@ void lca_pre(){
 
 ### 查询
 
-为了便于查找节点 $u,v$ 的最近公共祖先 $LCA(u,v)$，我们可以先使 $u,v$ 跳至同一高度（令 $d[u]>d[v]$），这时，我们便可以使用倍增算法 $\mathcal O(n\log_2n)$ 代替朴素 $\mathcal O(n)$ 向上跳。
+为了便于查找节点 $u,v$ 的最近公共祖先 $LCA(u,v)$，我们可以先使 $u,v$ 跳至同一高度（令 $d[u]>d[v]$），这时，我们便可以使用倍增算法 $\mathcal O(\log_2n)$ 代替朴素 $\mathcal O(n)$ 向上跳。
 
 类似于二进制，从 $2^{\log_2n+1}$ 到 $2^0$ 依次尝试，如果从 $u$ 跳至 $f[u][i]$ 满足 $d[f[u][i]] \geq d[v]$，那就可以从 $u$ 跳至 $f[u][i]$。
 
