--- a/_posts/2024-10-20-2.md
+++ b/_posts/2024-10-20-2.md
@@ -296,11 +296,57 @@ int lca(int u,int v){
 
 ## Tarjan 离线算法（DFS+并查集）
 
-## 思想
+### 思想
 
-先一次性读入所有的询问（所有的 $u_i,v_i$），再进行运算后一次性输出。
+#### 问题存储
 
+先一次性读入所有的询问（所有的 $u_i,v_i$）。随后以类似**邻接表**的方式存储，“建无向边”。
 
+比如，输入：
+
+```
+1 3
+2 4
+3 5
+7 8
+8 3
+```
+
+那么建出来的“邻接表”便长这样：
+
+![](https://cfyy.us.kg/img/2024/10/019.png)
+
+#### DFS+并查集
+
+记：
+
+* 节点 $x$ **在图中**的父节点为 $father_x$；
+* 节点 $x$ **在并查集中**的父节点为 $f_x$；
+
+当节点 $x$ 需要回溯至 $father_x$ 时，**尝试计算LCA的答案**并将 $x$ 和 $father_x$ 并入一个集合。即：$f_x=father_x$。
+
+假设当前访问节点 $x=v_i$，那么如果 $u_i$ 已经访问过，则 $LCA(u_i,v_i)=find(u_i)=find(v_i)$，其中 $find(x)$ 表示 $x$ 所在集合的根。
+
+关于正确性：同样地，参考此图。
+    ![](https://cfyy.us.kg/img/2024/10/015.png)
+此时 $u_i,v_i$ 都属于包含 $LCA(u_i,v_i)$ 的集合，则 $find(u_i)=find(v,i)=LCA(u_i,v_i)$。
+
+最后，当DFS结束时，所有答案便**以不一定与询问顺序相同的顺序**得出了。
+
+### 预处理
+
+首先初始化一个并查集，即对于整数 $i\in[1,n]$，使得$f_i=i$。
+
+随后使用类“邻接表”存储询问 $u_i,v_i$。
+
+为了便于表述，以下将
+
+开一个 $vis$ 数组，$vis_x$ 表示 $x$ 是否已经DFS过。
+
+然后DFS第一遍，预处理出以下信息：
+
+* $father_x$：$x$ **在图中的**父节点；
+* 
 
 ## 各种LCA算法的比较
 
