--- a/_posts/2024-10-23-2.md
+++ b/_posts/2024-10-23-2.md
@@ -1,12 +1,99 @@
 ---
 layout: post
-title: ""
-subtitle: ""
+title: "题解：未命名 1"
+subtitle: "题目见正文|题目名称真的长这样！"
 date: 2024-10-23
 author: "TH911"
 header-img: "img/2024/10/018.jpg"
 header-mask: 0.4
 tags:
-  - 
+  - 题解
+  - 数学
+  - 搜索
+  - 扫描线
+  - 二维数点
 ---
 
+关于题目名称：
+
+![](https://cfyy.us.kg/img/2024/10/020.png)
+
+***
+
+## 题目
+
+> | 时间限制 | 空间限制 |  输入文件名  |  输出文件名   |
+> | :------: | :------: | :----------: | :-----------: |
+> | $3000ms$ | $256MB$  | `unnamed.in` | `unnamed.out` |
+
+### 题目背景
+
+"Never gonna give you up~"
+
+"Never gonna let you down~"
+
+### 题目描述
+
+定义一个数 $a$ 是好的，当且仅当存在非负整数 $x,y(y>1)$ 使得 $a=x^y$。
+
+给定 $T$，有 $T$ 组询问，每次给定 $a,b,c,d$，你需要求出满足以下条件的数对 $(i,j)$ 的个数：
+
+* $a\leq i \leq b$
+* $c\leq j \leq b$
+
+* $\text{lcm}(i,j)$ 是好的，其中 $\text{lcm}(i,j)$ 表示 $i,j$ 的最小公倍数
+
+### 输入格式
+
+从 `unnamed.in` 读入数据。
+
+第一行一个整数 $T$。
+
+接下来 $T$ 行，每行 $4$ 个整数 $a,b,c,d$。
+
+### 输出格式
+
+输出到文件 `unnamed.out` 中。
+
+一共 $T$ 行，表示每个询问的答案。
+
+### 输入输出样例
+
+#### 输入 #1
+
+```
+3
+1 2 1 2
+1 5 1 5
+1 10 1 10
+```
+
+#### 输出 #1
+
+```
+1
+6
+20
+```
+
+### 说明/提示
+
+**请使用较快的读入方式。**
+
+对于 $40\%$ 的数据，$1\leq T \leq 10^6,1\leq a\leq b\leq10^3,1\leq c\leq d\leq 10^3$。
+
+对于另外 $10\%$ 的数据，$1\leq T\leq 10^6,a=b=1,1\leq c\leq d\leq 10^6$。
+
+对于另外 $20\%$ 的数据，$T=1,1=a\leq b\leq10^5,1=c\leq d\leq10^5$。
+
+对于 $100\%$ 的数据，$1\leq T\leq10^6,1\leq a\leq b\leq10^6,1\leq c\leq d\leq10^6$。
+
+#### 附件
+
+[ex_unnamed.zip](https://cfyy.us.kg/file/2024/10/ex_unnamed.zip)
+
+# 题解
+
+
+
+# AC代码
