--- a/_posts/2024-10-23-2.md
+++ b/_posts/2024-10-23-2.md
@@ -4,7 +4,7 @@ title: "题解：未命名 1"
 subtitle: "题目见正文|题目名称真的长这样！"
 date: 2024-10-23
 author: "TH911"
-header-img: "img/2024/10/018.jpg"
+header-img: "img/2024/10/006.jpeg"
 header-mask: 0.4
 tags:
   - 题解
