--- a/_posts/2024-10-19-1.md
+++ b/_posts/2024-10-19-1.md
@@ -17,3 +17,11 @@ tags:
 > [洛谷同步链接](https://www.luogu.com.cn/article/7if7f3dx)
 >
 > [题目传送门（洛谷）](https://www.luogu.com.cn/problem/UVA529) [题目传送门（UVA）](https://onlinejudge.org/index.php?option=com_onlinejudge&Itemid=8&category=7&page=show_problem&problem=470)
+
+## 迭代加深搜索
+
+### 定义
+
+> 迭代加深是一种 **每次限制搜索深度的** 深度优先搜索。——[OI Wiki](https://oi-wiki.org/search/iterative/#%E5%AE%9A%E4%B9%89)
+
+简单而言，就是一种**限制搜索深度**的DFS。~~有什么变化？？~~
