--- a/_posts/2024-10-19-1.md
+++ b/_posts/2024-10-19-1.md
@@ -25,3 +25,21 @@ tags:
 > 迭代加深是一种 **每次限制搜索深度的** 深度优先搜索。——[OI Wiki](https://oi-wiki.org/search/iterative/#%E5%AE%9A%E4%B9%89)
 
 简单而言，就是一种**限制搜索深度**的DFS。~~有什么变化？？~~
+
+### 过程
+
+设搜索深度上限为 $h$，搜索深度为 $p$ 。
+
+那么 $h$ 从 $1$ 开始自增，并在每次**自增前**进行DFS。（形如 `dfs(p,h,...)`）
+
+当DFS函数内部检测到 $p\ge h$ 时，便结束递归，**无论是否已经找到答案**。
+
+当所有递归结束后，如果找到了答案，那自然是最好的；否则使得 $h\leftarrow h+1$ 后再次调用DFS从 $p=1$ 开始递归，直至找到答案。
+
+### DFS实现的BFS？
+
+> 当搜索树的分支比较多时，每增加一层的搜索复杂度会出现指数级爆炸式增长，这时前面重复进行的部分所带来的复杂度几乎可以忽略，这也就是为什么迭代加深是可以近似看成 BFS 的。
+
+也可以这么说。
+
+但是需要注意的是，**迭代加深搜索**与**广度优先搜索**的思想**完全不一样**，这么说仅仅是因为上述原因。
