--- a/_posts/2024-10-23-2.md
+++ b/_posts/2024-10-23-2.md
@@ -94,6 +94,115 @@ tags:
 
 # 题解
 
+### 前置知识：二维数点
+
+参见[离线扫描线二位数点](https://cfyy.us.kg/2024/10/23/3/)。
+
+### 题意分析
+
+首先，假设我们已经找出了所有的合法数对 $(i,j)$。
+
+那么明显对于答案，二维数点即可，时间复杂度 $\mathcal O(n+T)\log_2V$，其中 $n$ 是点的个数，$V$ 是值域。
+
 
 
 # AC代码
+
+```cpp
+//#include<bits/stdc++.h>
+#include<algorithm> 
+#include<iostream>
+#include<cstring>
+#include<iomanip>
+#include<cstdio>
+#include<string>
+#include<vector>
+#include<cmath>
+#include<ctime>
+#include<deque>
+#include<queue>
+#include<stack>
+#include<list>
+using namespace std; 
+typedef long long ll;
+#define int long long
+const ll N=1e6,T=1e6;
+struct problem{
+	int l,r,id,value;
+};
+vector<problem>q[N+1];
+int ans[T+1];
+int top,p[N+1];
+int gcd(int a,int b){
+	if(b==0)return a;
+	return gcd(b,a%b);
+}
+vector<int>a[N+1];
+int cnt=0;
+void dfs(int x,int y,int g,int lst){
+	if(lst<=top&&x*p[lst]*p[lst]>N&&y*p[lst]*p[lst]>N){
+		cnt++;
+		a[x].push_back(y);
+		return;
+	}
+	for(int i=0,pi=x;pi<=N;i++,pi*=p[lst]){
+		for(int j=0,pj=y;pj<=N;j++,pj*=p[lst]){
+			int pl=gcd(g,max(i,j));
+			if(pl>1||i==0&&j==0)dfs(pi,pj,pl,lst+1);
+		}
+	}
+}
+void Start(){
+	static bool vis[N+1];
+	for(int i=2;i<=N;i++){
+		if(!vis[i]){
+			p[++top]=i;
+			vis[i]=true;
+			for(int j=i;j<=N;j+=i)vis[j]=true;
+		}
+	}dfs(1,1,0,1);
+}
+int t[N+1];
+int lowbit(int x){
+	return x&-x;
+}
+void add(int x,int k){
+	while(x<=N){
+		t[x]+=k;
+		x+=lowbit(x);
+	}
+}
+int query(int x){
+	int ans=0;
+	while(x){
+		ans+=t[x];
+		x-=lowbit(x);
+	}return ans;
+}
+signed main(){
+	freopen("unnamed.in","r",stdin);
+	freopen("unnamed.out","w",stdout);
+	
+	Start();
+	int t;
+	scanf("%lld",&t);
+	for(int i=1;i<=t;i++){
+		int a,b,c,d;
+		scanf("%lld %lld %lld %lld",&a,&b,&c,&d);
+		q[a-1].push_back({c,d,i,-1});
+		q[b].push_back({c,d,i,1});
+	}
+	for(int i=1;i<=N;i++){
+		for(int j=0;j<a[i].size();j++)add(a[i][j],1);
+		for(int j=0;j<q[i].size();j++){
+			ans[q[i][j].id]+=q[i][j].value*(query(q[i][j].r)-query(q[i][j].l-1));
+		}
+	}
+	for(int i=1;i<=t;i++)printf("%lld\n",ans[i]); 
+	
+	fclose(stdin); 
+	fclose(stdout);
+	return 0;
+}
+```
+
