--- a/_posts/2024-10-23-2.md
+++ b/_posts/2024-10-23-2.md
@@ -20,7 +20,7 @@ tags:
 
 ***
 
-## 题目
+题目
 
 > | 时间限制 | 空间限制 |  输入文件名  |  输出文件名   |
 > | :------: | :------: | :----------: | :-----------: |
@@ -92,21 +92,88 @@ tags:
 
 [ex_unnamed.zip](https://cfyy.us.kg/file/2024/10/ex_unnamed.zip)
 
-# 题解
+## 题解
 
 ### 前置知识：二维数点
 
 参见[离线扫描线二位数点](https://cfyy.us.kg/2024/10/23/3/)。
 
-### 题意分析
+### 解决策略
 
 首先，假设我们已经找出了所有的合法数对 $(i,j)$。
 
-那么明显对于答案，二维数点即可，时间复杂度 $\mathcal O(n+T)\log_2V$，其中 $n$ 是点的个数，$V$ 是值域。
+那么明显对于答案，二维数点即可，时间复杂度 $\large \mathcal O(n+T)\log_2V$，其中 $n$ 是点的个数，$V$ 是值域。
 
+一个十分显然的结论是，这题我们需要离线算法，那么我们考虑计算合法数对，但是，数据范围 $1\sim10^6$，如果直接枚举 $i,j$ 肯定 $\text{TLE}$，我们考虑更高效的方式。
 
+首先，打表是不行的，因为代码不能那么长（***约 $\color{red}49312KB$***）。
 
-# AC代码
+考虑质因数分解。（以下使用 $x,y$，而并非 $i,j$）
+
+令 $\large x=p_1^{a_1}p_2^{a_2}p_3^{a_3}\cdots p_k^{a_k},y=p_1^{b_1}p_2^{b_2}p_3^{b_3}\cdots p_k^{b_k}$，其中 $p_i$ 表示第 $i$ 大的质数，$a_i,b_i$ 均为非负整数。
+
+那么，若 $(x,y)$ 合法，则 $\gcd\big(\max(a_1,b_1),\max(a_2,b_2),\max(a_3,b_3),\cdots,\max(a_k,b_k)\big)>1$。
+
+***
+
+证明：
+
+$\large \because \text{lcm}(x,y)=p_1^{\max(a_1,b_1)}p_2^{\max(a_2,b_2)}p_3^{\max(a_3,b_3)}\cdots p_k^{\max(a_k,b_k)}$
+
+$\large \therefore p_1^{\max(a_1,b_1)}p_2^{\max(a_2,b_2)}p_3^{\max(a_3,b_3)}\cdots p_k^{\max(a_k,b_k)}=s^t$，其中 $s,t$ 均为非负整数且 $t>1$。
+
+令 $\large s=p_1^{c_1}p_2^{c_2}p_3^{c_3}\cdots p_k^{c_k}$，其中 $p_i,c_i$ 同上。
+
+则 $\large s^t=(p_1^{c_1}p_2^{c_2}p_3^{c_3}\cdots p_k^{c_k})^t=p_1^{c_1t}p_2^{c_2t}p_3^{c_3t}\cdots p_k^{c_kt}$
+
+$\therefore c_1t=\max(a_1,b_1),c_2t=\max(a_2,b_2),c_3t=\max(a_3,b_3),\cdots,c_kt=\max(a_k,b_k)$
+
+$\therefore$ 原式 $=\gcd(c_1t,c_2t,c_3t,\cdot,c_kt)=t\cdot\gcd(c_1,c_2,c_3,\cdots,c_k)$
+
+$\because t>1,\gcd(c_1,c_2,c_3,\cdots,c_k)\geq 1$
+
+$\therefore t\cdot \gcd(c_1,c_2,c_3,\cdots,c_k)>1$
+
+$\therefore \gcd\big(\max(a_1,b_1),\max(a_2,b_2),\max(a_3,b_3),\cdots,\max(a_k,b_k)\big)>1$
+
+***
+
+依此考虑DFS。
+
+定义 `dfs(int x,int y,int g,int lst)` 表示：
+
+* 搜索数对 $(x,y)$；
+* 当前状态下 $\gcd\big(\max(a_1,b_1),\max(a_2,b_2),\max(a_3,b_3),\cdots,\max(a_k,b_k)\big)=g$；
+* 上一个满足 $\max(a_i,b_i)>0$ 的 $i=lst$，即第 $lst$ 个质数是上一个 $x,y$ 的公因数。
+
+那么，枚举下一个满足 $\max(a_j,b_j)>0,j>lst$ 的 $j$ 和合法的 $a_j,b_j$ 即可。
+
+搜索出来的数对数量为 $3134549$。
+
+参考代码如下，其中 $p$ 为质数表，$top$ 表示质数个数，$\large pi=x\times p_{lst}^i$，$pj$ 同理。
+
+```cpp
+//保证x<=y
+void dfs(int x,int y,int g,int lst){
+	if(lst<=top&&x*p[lst]*p[lst]>N&&y*p[lst]*p[lst]>N){
+		//记录答案(参见后文)
+        a[x].push_back(y);
+		return;
+	}
+	for(int i=0,pi=x;pi<=N;i++,pi*=p[lst]){
+		for(int j=0,pj=y;pj<=N;j++,pj*=p[lst]){
+			int pl=gcd(g,max(i,j));
+			if(pl>1||i==0&&j==0)dfs(pi,pj,pl,lst+1);//i==0&&j==0:即x,y不变继续枚举
+		}
+	}
+}
+```
+
+搜索完成后，按照值域顺序加入树状数组数点即可。
+
+本题可以不使用**离散化**，当然，使用存储值后排序再按序加入数点的方法也行。
+
+## AC代码
 
 ```cpp
 //#include<bits/stdc++.h>
@@ -125,7 +192,6 @@ tags:
 #include<list>
 using namespace std; 
 typedef long long ll;
-#define int long long
 const ll N=1e6,T=1e6;
 struct problem{
 	int l,r,id,value;
@@ -139,20 +205,20 @@ int gcd(int a,int b){
 }
 vector<int>a[N+1];
 int cnt=0;
-void dfs(int x,int y,int g,int lst){
-	if(lst<=top&&x*p[lst]*p[lst]>N&&y*p[lst]*p[lst]>N){
-		cnt++;
-		a[x].push_back(y);
+void dfs(int x,int y,ll g,int lst){
+	if(lst<=top&&1ll*x*p[lst]*p[lst]>N&&1ll*y*p[lst]*p[lst]>N){
+		a[x].push_back(y);//供二位数点加入使用
 		return;
 	}
-	for(int i=0,pi=x;pi<=N;i++,pi*=p[lst]){
-		for(int j=0,pj=y;pj<=N;j++,pj*=p[lst]){
-			int pl=gcd(g,max(i,j));
+	for(ll i=0,pi=x;pi<=N;i++,pi*=p[lst]){
+		for(ll j=0,pj=y;pj<=N;j++,pj*=p[lst]){
+			ll pl=gcd(g,max(i,j));
 			if(pl>1||i==0&&j==0)dfs(pi,pj,pl,lst+1);
 		}
 	}
 }
 void Start(){
+    //质数筛法
 	static bool vis[N+1];
 	for(int i=2;i<=N;i++){
 		if(!vis[i]){
@@ -161,7 +227,7 @@ void Start(){
 			for(int j=i;j<=N;j+=i)vis[j]=true;
 		}
 	}dfs(1,1,0,1);
-}
+}//二位数点：权值树状数组
 int t[N+1];
 int lowbit(int x){
 	return x&-x;
@@ -185,20 +251,20 @@ signed main(){
 	
 	Start();
 	int t;
-	scanf("%lld",&t);
+	scanf("%d",&t);
 	for(int i=1;i<=t;i++){
 		int a,b,c,d;
-		scanf("%lld %lld %lld %lld",&a,&b,&c,&d);
+		scanf("%d %d %d %d",&a,&b,&c,&d);
 		q[a-1].push_back({c,d,i,-1});
 		q[b].push_back({c,d,i,1});
-	}
-	for(int i=1;i<=N;i++){
-		for(int j=0;j<a[i].size();j++)add(a[i][j],1);
+	}//二维数点
+	for(int i=1;i<=N;i++){//便利值域
+		for(int j=0;j<a[i].size();j++)add(a[i][j],1);//加入
 		for(int j=0;j<q[i].size();j++){
 			ans[q[i][j].id]+=q[i][j].value*(query(q[i][j].r)-query(q[i][j].l-1));
 		}
 	}
-	for(int i=1;i<=t;i++)printf("%lld\n",ans[i]); 
+	for(int i=1;i<=t;i++)printf("%d\n",ans[i]); 
 	
 	fclose(stdin); 
 	fclose(stdout);
